# agentic-ai-bootcamp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Deployment_Guide.md  README.md  requirements.txt
challenge/: create-zip.sh  problem_statement.md
challenge/llm-workflow-test/: README.md  main.py  pyproject.toml
challenge/llm_workflow/: README.md  main.py
challenge/mcp-server-invoice-test/: README.md  main.py  pyproject.toml
challenge/mcp-servers/invoice/: README.md  pyproject.toml
challenge/mcp-servers/invoice/src/mcp_server_invoice/: __init__.py  server_http.py
challenge/qna-agent-test/: README.md  main.py  pyproject.toml
challenge/qna_agent/: README.md  main.py  pyproject.toml
challenge/qna_agent/skills_ref/: parser.py  utils.py  validator.py
tutorial/: start_here.ipynb
tutorial/jupyter_notebook/: 01_inference_endpoint.ipynb  01_introduction_mcp.ipynb  01_locally_deployed_nim.ipynb  02_introduction_mcp.ipynb  02_low_level_mcp_server.ipynb  03_langgraph.ipynb  03_low_level_mcp.ipynb  04_agentic_workflows.ipynb  04_langraph_agent.ipynb  05_challenge.ipynb
tutorial/jupyter_notebook/images/: core_agent_loop.avif  middleware_final.avif
