[project]
name = "mcp-server-invoice-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.7",
    "langchain-nvidia-ai-endpoints>=1.0.2",
    "mcp[cli]>=1.26.0",
    "openai>=2.16.0",
    "pandas>=3.0.0",
    "rouge>=1.0.1",
]
