[project]
name = "qna-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.7",
    "langchain-nvidia-ai-endpoints>=1.0.2",
    "langgraph>=1.0.7",
    "pandas>=3.0.0",
    "rouge>=1.0.1",
    "strictyaml>=1.7.3",
]
