[project]
name = "mcp-server-invoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tagekezo", email = "tagekezo@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.scripts]
mcp-server-invoice = "mcp_server_invoice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
